--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <body>
     <div class="container mt-5">
         <h3 class="d-flex justify-content-center mb-5">Book Tracker</h3>
+        <div class="d-flex justify-content-center">
+            <div class="d-flex flex-row justify-content-around w-50 mb-5">
+                <h5><button class="btn btn-info" buttonFunc="readList">View Read List</button></h5>
+                <h5><button class="btn btn-info" buttonFunc="completedList">View Completed Books</button></h5>
+            </div>
+        </div>
 
         <div class="input-group">
         <input type="text" class="form-control" id="bookSearchField" aria-describedby="bookSearch" placeholder="Search a Book!">
