--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3 class="d-flex justify-content-center mb-5">Book Tracker</h3>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-row justify-content-around w-50 mb-5">
-                <h5><button class="btn btn-info" buttonFunc="readList">View Read List</button></h5>
+                <h5><button class="btn btn-info" buttonFunc="readList">View Reading List</button></h5>
                 <h5><button class="btn btn-info" buttonFunc="completedList">View Completed Books</button></h5>
             </div>
         </div>
