removed console.logs, changed search wording, and added https to search

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="input-group">
-        <input type="text" class="form-control" id="bookSearchField" aria-describedby="bookSearch" placeholder="Search a Book!">
+        <input type="text" class="form-control" id="bookSearchField" aria-describedby="bookSearch" placeholder="Search for a book using the title, ISBN, or Author!">
         <button class="btn btn-primary" type="button" id="bookSearchBtn">Search</button>
         </div>
 
