--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         <h3 class="d-flex justify-content-center mb-5">Book Tracker</h3>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-row justify-content-around w-50 mb-5">
-                <h5><button class="btn btn-info" buttonFunc="readList">View Reading List</button></h5>
-                <h5><button class="btn btn-info" buttonFunc="completedList">View Completed Books</button></h5>
+                <h5><button class="btn btn-secondary" buttonFunc="readList">View Reading List</button></h5>
+                <h5><button class="btn btn-secondary" buttonFunc="completedList">View Completed Books</button></h5>
             </div>
         </div>
 
-        <div class="input-group">
-        <input type="text" class="form-control" id="bookSearchField" aria-describedby="bookSearch" placeholder="Search for a book using the title, ISBN, or Author!">
-        <button class="btn btn-primary" type="button" id="bookSearchBtn">Search</button>
+        <div class="d-flex justify-content-center">
+            <div class="input-group w-75">
+                <input type="text" class="form-control" id="bookSearchField" aria-describedby="bookSearch" placeholder="Search for a book using the title, ISBN, or Author!">
+                <button class="btn btn-primary" type="button" id="bookSearchBtn">Search</button>
+            </div>
         </div>
 
         <div class="d-flex justify-content-center">
