--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
         <div class="d-flex justify-content-center">
             <h5 id="resultNum" class="mt-3"></h5>
+            <div id="loadingSpinner" class="spinner-border mt-3 visually-hidden" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
         </div>
         <div class="d-flex justify-content-center">
             <div id="searchResults" class="d-flex flex-column w-75">
